--- a/package.json
+++ b/package.json
@@ -8,25 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-multiselect": "^2.1.3",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.1.0",
-    "@ky-is/vue-cli-plugin-tailwind": "^1.5.0",
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/eslint-config-prettier": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "postcss-preset-env": "^6.3.0",
-    "stylus": "^0.54.5",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@ky-is/vue-cli-plugin-tailwind": "^1.7.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "tailwindcss": "^0.7.0",
-    "vue-template-compiler": "^2.5.17"
+    "tailwindcss": "^0.7.4",
+    "vue-template-compiler": "^2.6.14"
   }
 }
